[package]
name = "dsa"
version = "0.1.0"
edition = "2021"
build = "rust/main.rs"
authors = ["Deepesh Kalura <deepeshkalurs@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "dsa"
path = "rust/main.rs"

[build]
rustflags = ["-A", "non_snake_case"]


[dependencies]
